push song ids to kafka

--- a/Project/src/main/resources/application.conf
+++ b/Project/src/main/resources/application.conf
@@ -1,7 +1,8 @@
 # these are our own config values defined by the app
 spark-project {
   kafka{
-    server="localhost:9092"
+    server="localhost:9092",
+    source="/csv/streaming20k.csv"
   }
   mongo{
 
