--- a/Project/src/main/resources/application.conf
+++ b/Project/src/main/resources/application.conf
@@ -7,6 +7,10 @@ spark-project {
   mongo{
 
   }
+  spotify{
+    client_id="406e25daa05b4aed98d40fedc953686b"
+    client_secret="3bd55cdb073045908e88261af48f5d11"
+  }
 }
 
 # Here we override some values used by a library
