Removed some hardcodings

--- a/Project/src/main/resources/application.conf
+++ b/Project/src/main/resources/application.conf
@@ -1,11 +1,14 @@
 # these are our own config values defined by the app
 spark-project {
   kafka{
-    server="localhost:9092",
-    source="/csv/streaming20k.csv"
+    server = "localhost:9092",
+    source = "/csv/streaming20k.csv"
   }
   mongo{
-
+    DB = "music_data2" //this is for test, use "music_data" for the full DB
+    historyCollection = "historyRequests"
+    modelCollection = "results"
+    dataCollection = "triplets"
   }
   spotify{
     client_id="406e25daa05b4aed98d40fedc953686b"
