--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
     #   - MONGODB_REPLICA_SET_MODE=primary
 
   master:
-    image: sequenceiq/spark:1.4.0
+    #image: sequenceiq/spark:1.4.0
+    image: briansetz/docker-spark:2.2.1
     hostname: master
     container_name: spark-master
     ports:
@@ -30,11 +31,12 @@ services:
       # - "constraint:node==<yourmasternode>"
     links:
           - mongo
-    restart : always
-    command: bash /usr/local/spark/sbin/start-master.sh && ping localhost > /dev/null
+    #restart : always
+    command: spark/sbin/start-master.sh
 
   spark-worker-1:
-    image: sequenceiq/spark:1.4.0
+    #image: sequenceiq/spark:1.4.0
+    image: briansetz/docker-spark:2.2.1
     container_name: spark-slave
     # depends_on:
     #   - master
@@ -48,8 +50,8 @@ services:
           - master:master
     expose: 
       - "8081"
-    restart : always
-    command: bash /usr/local/spark/sbin/start-slave.sh spark://master:7077 && ping localhost > /dev/null
+    #restart : always
+    command: spark/sbin/start-slave.sh spark://master:7077
       # - spark/sbin/start-slave.sh spark://master:7077
 
 
