--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,14 @@ volumes:
 services:
 
   mongo:
-    image: mongo
+    image: mongo:3.4
     ports:
        - "27017:27017"
     volumes:
       - mongo-vol:/data/db
     container_name: mongoCluster
-    # environment:
-    #   - MONGODB_REPLICA_SET_MODE=primary
 
   master:
-    #image: sequenceiq/spark:1.4.0
     image: briansetz/docker-spark:2.2.1
     hostname: master
     container_name: spark-master
@@ -26,33 +23,21 @@ services:
       - "4040:4040"
     expose: 
       - "7077" 
-    # environment:
-    #   - INIT_DAEMON_STEP=setup_spark
-      # - "constraint:node==<yourmasternode>"
     links:
-          - mongo
+      - mongo
     #restart : always
     command: spark/sbin/start-master.sh
 
   spark-worker-1:
-    #image: sequenceiq/spark:1.4.0
     image: briansetz/docker-spark:2.2.1
     container_name: spark-slave
-    # depends_on:
-    #   - master
-    # ports:
-    #   - "8081:8081"
-    # environment:
-      # - "SPARK_MASTER=spark://spark-master:7077"
-      # - "constraint:node==<yourmasternode>"
     links:
-          - mongo
-          - master:master
+      - mongo
+      - master:master 
     expose: 
       - "8081"
     #restart : always
     command: spark/sbin/start-slave.sh spark://master:7077
-      # - spark/sbin/start-slave.sh spark://master:7077
 
 
 
