separate original and sampled data

--- a/Project/src/main/resources/application.conf
+++ b/Project/src/main/resources/application.conf
@@ -5,6 +5,7 @@ spark-project {
     source = "/csv/streaming20k.csv"
   }
   mongo{
+    DBFULL = "music_data" //this is for test, use "music_data" for the full DB
     DB = "music_data2" //this is for test, use "music_data" for the full DB
     historyCollection = "historyRequests"
     modelCollection = "results"
